scrollbar design fix

--- a/app/assets/stylesheets/layout/header.scss
+++ b/app/assets/stylesheets/layout/header.scss
@@ -76,5 +76,24 @@ header#header-frame {
       justify-self: flex-end;
       font-size: $large-text;
     }
+
+
+    &::-webkit-scrollbar-track
+    {
+      border: 1px solid black;
+      background-color: rgb(26, 26, 26);
+    }
+    
+    &::-webkit-scrollbar
+    {
+      width: 10px;
+      background-color: rgb(26, 26, 26);
+    }
+    
+    &::-webkit-scrollbar-thumb
+    {
+      background-color: #000000;	
+    }
+
   }
 }
